Replaced singleton by Set.of() in SystemConfigBootstrapModel.java